--- a/public/tournamenter-obr/obr-home.ejs
+++ b/public/tournamenter-obr/obr-home.ejs
@@ -20,7 +20,7 @@
 <div class="col-md-8 col-md-offset-2" style="padding-top: 20px;">
   <div class="col-md-12">
     <div class="alert alert-warning">
-      <strong>Bem vindo ao Tournamenter!</strong> O que deseja?
+      <strong>zika</strong> O que deseja?
     </div>
   </div>
 </div>
