--- a/public/tournamenter-obr/obr-home.ejs
+++ b/public/tournamenter-obr/obr-home.ejs
@@ -27,7 +27,7 @@
 
 <div class="col-md-8 col-md-offset-2">
 
-  <div class="col-md-6 col-sm-6">
+  <div class="col-md-6 col-sm-6" style="width:100%">
     <a href="/tournamenter-obr" target="_blank" class="no-decoration">
       <div class="jumbotron">
         <h1 class="text-center"><i class="fa fa-flag-checkered" aria-hidden="true"></i></h1>
