--- a/public/tournamenter-obr/views/rescue_scorer_2018_regional.html
+++ b/public/tournamenter-obr/views/rescue_scorer_2018_regional.html
@@ -35,18 +35,17 @@
       ng-init="k = 'first'">
 
       <div class="thumbnail">
-        <h5>Marcador 1</h5>
+        <h5>Missão 1 - Viagem Espacial</h5>
         <div class="btn-group btn-group-justified">
           <label class="btn btn-default" ng-model="scoreData.rooms['first']"
-            btn-radio="0">Nop</label>
+            btn-radio="0">Não</label>
           <label class="btn btn-default" ng-model="scoreData.rooms['first']"
-            btn-radio="1">1ª</label>
+            btn-radio="1">vei</label>
           <label class="btn btn-default" ng-model="scoreData.rooms['first']"
-            btn-radio="2">2ª</label>
+            btn-radio="2">sup</label>
           <label class="btn btn-default" ng-model="scoreData.rooms['first']"
-            btn-radio="3">3ª</label>
-          <label class="btn btn-default" ng-model="scoreData.rooms['first']"
-            btn-radio="4">Desistiu</label>
+            btn-radio="3">trip</label>
+          
           <span class="input-group-addon">{{scorings.rooms['first'] || 0}} pts</span>
         </div>
 
