Lego Style File Create

--- a/public/tournamenter-obr/obr-desafio.ejs
+++ b/public/tournamenter-obr/obr-desafio.ejs
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="/tournamenter-obr/components/font-awesome/font-awesome.css">
 <link rel="stylesheet" href="/tournamenter-obr/components/bootstrap/bootstrap.css">
 <link rel="stylesheet" href="/tournamenter-obr/styles/site.css">
+<link rel="stylesheet" href="/tournamenter-obr/styles/lego.css">
 
 <style type="text/css">
 .ended{
