--- a/public/tournamenter-obr/views/rescue_scorer_2018_regional.html
+++ b/public/tournamenter-obr/views/rescue_scorer_2018_regional.html
@@ -48,6 +48,18 @@
           
           <span class="input-group-addon">{{scorings.m01['m01Pts'] || 0}} pts</span>
         </div>
+       <div class="thumbnail">
+        <h5>Missão 2 - Matriz de Painel Solar</h5>
+        <div class="btn-group btn-group-justified">
+          <label class="btn btn-default" ng-model="scoreData.m02['m02Pts']"
+            btn-radio="0">Não</label>
+          <label class="btn btn-default" ng-model="scoreData.m02['m02Pts']"
+            btn-radio="1">ambas</label>
+          <label class="btn btn-default" ng-model="scoreData.m02['m02Pts']"
+            btn-radio="2">apenas a sua</label>
+          
+          <span class="input-group-addon">{{scorings.m02['m02Pts'] || 0}} pts</span>
+        </div>
 
         <div style="margin-top: 44px;" class="btn btn-lg btn-block navbar-btn btn-danger" ng-click="timer.stop();" ng-class="{disabled: timer.data.state == 'STOPPED'}">
           <span class="glyphicon glyphicon-pause"></span> Parar Tempo
