--- a/public/tournamenter-obr/views/rescue_scorer_2018_regional.html
+++ b/public/tournamenter-obr/views/rescue_scorer_2018_regional.html
@@ -82,7 +82,17 @@
         
           <span class="input-group-addon">{{scorings.m04['m04Pts'] || 0}} pts</span>
         </div>
-
+        
+        <h5>Obstáculos</h5>
+        <div class="btn-group btn-group-justified">
+          <label class="btn btn-default"
+            ng-model="scoreData.obstacles[j]"
+            ng-repeat="j in ['A','B','C','D']"
+            btn-checkbox>
+              {{j}}
+          </label>
+          <span class="input-group-addon">{{sumSpecial(scorings.obstacles, ['A','B','C','D'])}} pts</span>
+        </div>
         <div style="margin-top: 44px;" class="btn btn-lg btn-block navbar-btn btn-danger" ng-click="timer.stop();" ng-class="{disabled: timer.data.state == 'STOPPED'}">
           <span class="glyphicon glyphicon-pause"></span> Parar Tempo
         </div>
