--- a/public/tournamenter-obr/styles/lego.css
+++ b/public/tournamenter-obr/styles/lego.css
@@ -1,3 +1,7 @@
 btn {
-
+    background-image: url("images/lego_bg.png");
+    background-color: transparent;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
