FLL Style Update

--- a/public/tournamenter-obr/obr-home.ejs
+++ b/public/tournamenter-obr/obr-home.ejs
@@ -10,7 +10,7 @@
 <div class="col-md-8 col-md-offset-2" style="padding-top: 20px;">
   <div class="col-md-12">
     <div class="alert alert-danger">
-      <strong>O plugin da OBR possui uma atualização.</strong>
+      <strong>O plugin da FLL possui uma atualização.</strong>
       Atualize o quanto antes para a versão <span class="label label-warning"><%= newestVersion %></span>
     </div>
   </div>
