--- a/public/tournamenter-obr/views/FLL2018.html
+++ b/public/tournamenter-obr/views/FLL2018.html
@@ -38,13 +38,13 @@
         <h5>Missão 1 - Viagem Espacial</h5>
         <div class="btn-group btn-group-justified">
           <label class="btn btn-default" ng-model="scoreData.m01['m01Pts']"
-            btn="0">Não</label>
+            btn-checkbox="0">Não</label>
           <label class="btn btn-default" ng-model="scoreData.m01['m01Pts']"
-            btn="1">vei</label>
+            btn-checkbox="1">vei</label>
           <label class="btn btn-default" ng-model="scoreData.m01['m01Pts']"
-            btn="2">sup</label>
+            btn-checkbox="2">sup</label>
           <label class="btn btn-default" ng-model="scoreData.m01['m01Pts']"
-            btn="3">trip</label>
+            btn-checkbox="3">trip</label>
           
           <span class="input-group-addon">{{scorings.m01['m01Pts'] || 0}} pts</span>
         </div>
