--- a/public/tournamenter-obr/views/FLL2018.html
+++ b/public/tournamenter-obr/views/FLL2018.html
@@ -14,7 +14,7 @@
   <div class="jumbotron">
       <h1>Aguardando...</h1>
       <p>Para começar a pontuar, inicie o cronômetro</p>
-      <p>Versão: 2018.2</p>
+      <p>Versão: 2018.1</p>
     </div>
   </div>
 </div>
@@ -38,13 +38,13 @@
         <h5>Missão 1 - Viagem Espacial</h5>
         <div class="btn-group btn-group-justified">
           <label class="btn btn-default" ng-model="scoreData.m01['m01Pts']"
-            btn-checkbox="0">Não</label>
+            >Não</label>
           <label class="btn btn-default" ng-model="scoreData.m01['m01Pts']"
-            btn-checkbox="1">vei</label>
+            >vei</label>
           <label class="btn btn-default" ng-model="scoreData.m01['m01Pts']"
-            btn-checkbox="2">sup</label>
+            >sup</label>
           <label class="btn btn-default" ng-model="scoreData.m01['m01Pts']"
-            btn-checkbox="3">trip</label>
+            >trip</label>
           
           <span class="input-group-addon">{{scorings.m01['m01Pts'] || 0}} pts</span>
         </div>
