--- a/public/tournamenter-obr/views/scorer.html
+++ b/public/tournamenter-obr/views/scorer.html
@@ -4,7 +4,7 @@
 		background-color: #DD3322 !important;
 	}
 </style>
-<div ng-controller="RescueScorer">
+<div id="test" ng-controller="RescueScorer">
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation"
 		ng-class="{ended: timer.data.value > scorer.totalTime*10}">
 		<div class="container">
